[update]みんなの投稿一覧に都道府県名を表示

--- a/app/views/public/travels/index.html.erb
+++ b/app/views/public/travels/index.html.erb
@@ -184,15 +184,16 @@
           <%= image_tag travel.get_image(300,300),class:"trim"%>
         <%end%>
         <div class="d-flex flex-row">
-          <div class="d-flex flex-column mt-2 ml-2">
+          <div class="d-flex flex-column mt-4 ml-2">
             <%= link_to customer_path(travel.customer_id) do %>
               <%= image_tag travel.customer.get_profile_image(50,50),class:"rounded-circle border"%>
             <% end %>
             <div class="mx-auto"><%= travel.customer.account%></div>
           </div>
-          <div class="d-flex flex-column mx-auto mx-0">
+          <div class="d-flex flex-column ml-3 mr-0">
             <div class="d-flex flex-column travel-index-title">
-              <div><%= travel.travel_start.strftime('%Y/%m/%d')%>〜<%= travel.travel_finish.strftime('%Y/%m/%d')%></div>
+              <div class="mx-auto"><%= travel.travel_start.strftime('%Y/%m/%d')%>〜<%= travel.travel_finish.strftime('%Y/%m/%d')%></div>
+              <h6 class="mx-auto mb-0">〜<%= travel.destination_i18n%>〜</h6>
               <%= link_to travel_path(travel),class:"mx-auto" do %>
                 <h4 class="mb-0 travel-index-title"><%= travel.travel_title%></h4>
               <%end%>
