--- a/app/views/public/customers/good.html.erb
+++ b/app/views/public/customers/good.html.erb
@@ -22,18 +22,8 @@
               <%end%>
             </div>
             <div class="d-flex align-items-center justify-content-center">
-              <div class="pr-2">
-                <% if customer_signed_in? %>
-                  <% if travel.good_by?(current_customer) %>
-                    <%= link_to travel_goods_path(travel),class:"travel-show-good-comment_decoration", method: :delete do %>
-                      <p class="travel-index-good-comment mb-0"><span class="travel-show-span">♥</span><%= travel.goods.count %> いいね</p>
-                    <% end %>
-                  <% else %>
-                    <%= link_to travel_goods_path(travel),class:"travel-show-good-comment_decoration", method: :post do %>
-                      <p class="travel-index-good-comment mb-0">♡<%= travel.goods.count %> いいね</p>
-                    <% end %>
-                  <% end %>
-                <%end%>
+              <div id="good_btn_<%= travel.id %>" class="pr-2">
+                <%= render 'public/goods/good', travel: travel %>
               </div>
               <div class="pl-2">
                 <%= link_to new_travel_comment_path(travel),class:"travel-show-good-comment_decoration" do%>
