--- a/app/views/public/travels/index.html.erb
+++ b/app/views/public/travels/index.html.erb
@@ -1,5 +1,4 @@
 
-
     <div class="d-flex justify-content-center align-items-center py-2"><h3 class="follow-title mb-0">旅行検索</h3></div>
     <div class="d-flex justify-content-center align-items-center pb-2">
       <%= form_with url: root_path, method: :get, local: true do |f| %>
@@ -9,7 +8,7 @@
       <% end %>
     </div>
 <div class="travel-index d-flex justify-content-center">
-  <div class="col-2 ml-5 mt-3 overflow-auto">
+  <div class="col-2 p-2 mt-2 overflow-auto">
     <div class="accordion" id="accordionExample">
       <div class="card">
         <div class="card-header header-hokkai py-1" id="headingOne">
@@ -177,7 +176,7 @@
       </div>
     </div>
   </div>
-  <div class="col-10 d-flex flex-wrap">
+  <div class="col-10 d-flex flex-wrap px-0">
     <% @travels.reverse.each do |travel|%>
       <div class="card travel-index-card mt-3 mb-2 mx-2 shadow-lg">
         <%= link_to travel_path(travel) do %>
@@ -199,18 +198,8 @@
               <%end%>
             </div>
             <div class="d-flex align-items-center justify-content-center">
-              <div class="pr-2">
-                <% if customer_signed_in? %>
-                  <% if travel.good_by?(current_customer) %>
-                    <%= link_to travel_goods_path(travel),class:"travel-show-good-comment_decoration", method: :delete do %>
-                      <p class="travel-index-good-comment mb-0"><span class="travel-show-span">♥</span><%= travel.goods.count %> いいね</p>
-                    <% end %>
-                  <% else %>
-                    <%= link_to travel_goods_path(travel),class:"travel-show-good-comment_decoration", method: :post do %>
-                      <p class="travel-index-good-comment mb-0">♡<%= travel.goods.count %> いいね</p>
-                    <% end %>
-                  <% end %>
-                <%end%>
+              <div id="good_btn_<%= travel.id %>" class="pr-2">
+                <%= render 'public/goods/good', travel: travel %>
               </div>
               <div class="pl-2">
                 <%= link_to new_travel_comment_path(travel),class:"travel-show-good-comment_decoration" do%>
